# cascade-public-monorepo

./: .gitignore  .gitmodules  LICENSE  README.md  requirements.txt  requirements.txt___
.github/actions/setup_cache/: action.yml
.github/containers/dev-container/: Dockerfile
.github/pages/: README.md
.github/scripts/: analyze-all.sh  build-all.sh  checkout-all.sh  ci.sh  deploy-all.sh  doc-all.sh  install-all.sh  requirements.txt  test-all.sh
.github/workflows/: blank.yml  build-ubuntu.yml  build.yml  checkout-external-components.sh  ci.yml  deploy.yml  doc.yml  jekyll-gh-pages.yml  multiplatform-build.yml  quick-dev-ci.yml  test.yml
components/bemoved/: README.md
components/bemoved/grail-support/: README.md
components/bemoved/grail-support/grail-upload/: README.md
components/bemoved/runscan-support/: README.md
components/bemoved/runscan-support/runscan-upload/: README.md
components/cocor/: README.md
components/metal/: README.md  build.sh
components/metal/cocor/: CMakeLists.txt  README.md  Scanner.h  build-cocor.sh  build.sh
scripts/: checkout-external-components.sh
